apps/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo

spec:
  ingressClassName: traefik

  rules:
  - host: nginx.home.arpa

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-demo
            port:
              number: 80
